ADD: Create responsive design for landing page's home section.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,26 @@
       </ul>
     </nav>
   </header>
-
+  <main>
+    <section class="home">
+      <div class="title home-text">
+        <p class="support-text">Unhappy with your website?</p>
+        <h1 class="main-text">We create beautiful and fast web services</h1>
+      </div>
+      <img src="./img/heroImage.jpg" alt="People concentrating on looking at a blackboard" class="home-img">
+      <div class="description home-text">
+        <p class="support-text">Story, emotion and purpose</p>
+        <h2 class="main_text">We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time.</h2>
+      </div>
+      <div class="contact-email home-text">
+        <label for="email" class="label">Want us to contact you?</label>
+        <div class="email-container">
+          <input type="email" name="email" id="email" class="email-input" placeholder="Email">
+          <button class="join">Join</button>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
