ADD: responsive works section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul class="items">
         <li><a href="#home" class="item" data-text="home">home</a></li>
         <li><a href="#services" class="item" data-text="services">services</a></li>
-        <li><a href="#our-work" class="item" data-text="our works">our works</a></li>
+        <li><a href="#our-works" class="item" data-text="our works">our works</a></li>
         <li><a href="#clients" class="item" data-text="clients">clients</a></li>
         <li><a href="#contact" class="item" data-text="contact">contact</a></li>
       </ul>
@@ -119,6 +119,57 @@
         </div>
         
       </div>
+    </section>
+    <section id="our-works" class="our-works">
+      <h3 class="main">Good design means good business</h3>
+      <div class="cards">
+        <div class="card">
+          <div class="img-container">
+            <img src="./img/smarthome.jpg" alt="Design of an interface for a smart home" class="img">
+          </div>
+          <div class="text-container">
+            <h4 class="support-text">Full stack application</h4>
+            <h3 class="main-text">Smart home dashboard</h3>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="img-container">
+            <img src="./img/onboard.png" alt="Design of an interface for a onboard application" class="img">
+          </div>
+
+          <div class="text-container">
+            <h4 class="support-text">UX/UI design</h4>
+            <h3 class="main-text">Onboard application</h3>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="img-container">
+            <img src="./img/booking.png" alt="Design of an interface for a booking system" class="img">
+          </div>
+          <div class="text-container">
+            <h4 class="support-text">Mobile application</h4>
+            <h3 class="main-text">Booking system</h3>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="img-container">
+            <img src="./img/juice-product.png" alt="Design of an interface for a Juice product homepage" class="img">
+          </div>
+          <div class="text-container">
+            <h4 class="support-text">Front End application</h4>
+            <h3 class="main-text">Juice product homepage</h3>
+          </div>
+        </div>
+      </div>
+      <a href="https://github.com/afuentes11" target="_blank" class="container-more-info">
+        <p class="more-info-text">see more</p>
+        <span class="material-icons-round arrow-icon">
+          arrow_right_alt
+        </span>
+      </a>
     </section>
   </main>
 
