--- a/index.html
+++ b/index.html
@@ -171,6 +171,34 @@
         </span>
       </a>
     </section>
+    <section id="clients" class="clients">
+      <div class="text-container">
+        <p class="support">Meet the team</p>
+        <p class="title">We are chilled and a laidback team</p>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="img-container">
+        <div class="left-side">
+          <img src="./img/person3.png" alt="smiling girl" class="img">
+        </div>
+        <div class="right-side">
+          <img src="./img/person1.png" alt="smiling guy 1" class="img">
+          <img src="./img/person2.png" alt="smiling guy 2" class="img">
+        </div>
+      </div>
+    </section>
+    <section class="comments">
+      <h3 class="main-text">
+        “Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and talented team.”    
+      </h3>
+      <div class="client-container">
+        <img src="./img/person4.png" alt="customer photo" class="photo">
+        <div class="description">
+          <p class="name">Carlos Tran</p>
+          <p class="company">The Decorate Gatsby</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
