FIX: btn return to up

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
-  <script src="js/return_to_up.js"></script>
+  <script src="js/return_to_up.js" type="module"></script>
   <script src="js/entraces.js" type="module"></script>
 </body>
 </html>
